@@ -1,8 +1,10 @@
 From dbt2-base
 
-ENV PATH="/usr/pgsql-13/bin:$PATH"
+ARG PGVERSION
 
-RUN dnf -y install postgresql13-server
+ENV PATH="/usr/pgsql-${PGVERSION}/bin:$PATH"
+
+RUN dnf -y install postgresql${PGVERSION}-server
 
 COPY . /usr/local/src/dbt2
 
