@@ -5,7 +5,9 @@ RUN dnf -y install epel-release && \
     dnf config-manager --set-enabled powertools && \
     dnf -y install R
 
-ENV PATH="/usr/pgsql-13/bin:$PATH"
+ARG PGVERSION
+
+ENV PATH="/usr/pgsql-${PGVERSION}/bin:$PATH"
 
 COPY . /usr/local/src/dbt2
 WORKDIR /usr/local/src/dbt2
