@@ -10,6 +10,7 @@ fi
 
 WAREHOUSES=1
 DBMS="pgsql"
+PGVERSION=13
 
 if [ $# -ge 1 ]; then
 	WAREHOUSES=$1
@@ -18,6 +19,13 @@ fi
 if [ $# -ge 2 ]; then
 	DBMS=$2
 fi
+
+which jq > /dev/null 2>&1
+if [ $? -eq 0 ]; then
+	PGORG="https://www.postgresql.org/versions.json"
+	PGVERSION=`curl -s $PGORG | jq -r 'sort | .[].major' | tail -n 1`
+fi
+echo "Using PostgreSQL Major Version $PGVERSION"
 
 TOPDIR=`dirname $0`
 
@@ -30,6 +38,7 @@ fi
 
 TOPDIR="${TOPDIR}/.."
 docker build -t dbt2-database-${DBMS}-${WAREHOUSES}w \
+		--build-arg PGVERSION=$PGVERSION \
 		--build-arg dbms=$DBMS \
 		--build-arg warehouses=$WAREHOUSES \
 		-f Dockerfile.database $TOPDIR
