@@ -9,8 +9,18 @@ if [ $? -ne 0 ]; then
 	exit 1
 fi
 
+PGVERSION=13
+
+which jq > /dev/null 2>&1
+if [ $? -eq 0 ]; then
+	PGORG="https://www.postgresql.org/versions.json"
+	PGVERSION=`curl -s $PGORG | jq -r 'sort | .[].major' | tail -n 1`
+fi
+echo "Using PostgreSQL Major Version $PGVERSION"
+
 TOPDIR=`dirname $0`
 ${TOPDIR}/prepare-image || exit 1
 
 TOPDIR="${TOPDIR}/.."
-docker build -t dbt2-driver -f Dockerfile.driver ${TOPDIR}
+docker build --build-arg PGVERSION=$PGVERSION -t dbt2-driver \
+		-f Dockerfile.driver ${TOPDIR}
