@@ -3,11 +3,28 @@
 # Prepare a Docker image for building and running the driver, client and
 # database.
 
+PGVERSION=13
+
 which docker > /dev/null 2>&1
 if [ $? -ne 0 ]; then
 	echo "docker not in path"
 	exit 1
 fi
 
+if [ $# -ne 1 ]; then
+	which jq > /dev/null 2>&1
+	if [ $? -ne 0 ]; then
+		echo "install jq to automatically use the latest postgres version"
+		echo "defaulting to version $PGVERSION"
+	else
+		PGORG="https://www.postgresql.org/versions.json"
+		PGVERSION=`curl -s $PGORG | jq -r 'sort | .[].major' | tail -n 1`
+	fi
+else
+	PGVERSION=$1
+fi
+
+echo "Using PostgreSQL Major Version $PGVERSION"
+
 DOCKER_DIR=`dirname $0`
-docker build -t dbt2-base $DOCKER_DIR
+docker build --build-arg PGVERSION=$PGVERSION -t dbt2-base $DOCKER_DIR
