@@ -1,3 +1,7 @@
+vX.Y.Z
+
+- Made some changes to Docker scripts to help customize PostgreSQL version used
+
 v0.43.0
 
 - Adopt Artistic License 2.0
